--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,106 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
+# StackRox inline orb sample
+# author neil@stackrox.com
+
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
+orbs:
+  rox-orb:
     jobs:
-      - say-hello
+      rox-deployment-check:
+        machine: true
+        parameters:
+          rox_api_token:
+            description: API key with CI permissions
+            type: string
+          rox_central_endpoint:
+            description: URL of Central (central.contoso.com:443 for example)
+            type: string
+          rox_deployment:
+            description: Path/name of yaml to check
+            type: string
+        steps:
+          - checkout
+          - rox-roxctl-install:
+              rox_api_token: <<parameters.rox_api_token>>
+              rox_central_endpoint: <<parameters.rox_central_endpoint>>
+          - run: >-
+              ./roxctl deployment check -e <<parameters.rox_central_endpoint>> --file <<parameters.rox_deployment>>
+      rox-image-scan:
+        machine: true
+        parameters:
+          rox_api_token:
+            description: API key with CI permissions
+            type: string
+          rox_central_endpoint:
+            description: URL of Central (central.contoso.com:443 for example)
+            type: string
+          rox_image:
+            description: Name of image to scan (neilcar/testimage:5 or registry.contoso.com/db_broker:latest for example)
+            type: string
+          output_format:
+            description: Format of image scan output (table | csv | json) (default "json")
+            type: string
+            default: "json"
+        steps:
+          - rox-roxctl-install:
+              rox_api_token: <<parameters.rox_api_token>>
+              rox_central_endpoint: <<parameters.rox_central_endpoint>>
+          - run: >-
+              ./roxctl image scan -e <<parameters.rox_central_endpoint>> --image <<parameters.rox_image>> --output <<parameters.output_format>>
+      rox-image-check:
+        machine: true
+        parameters:
+          rox_api_token:
+            description: API key with CI permissions
+            type: string
+          rox_central_endpoint:
+            description: URL of Central (central.contoso.com:443 for example)
+            type: string
+          rox_image:
+            description: Name of image to check (neilcar/testimage:5 or registry.contoso.com/db_broker:latest for example)
+            type: string
+          output_format:
+            description: Format of image scan output (table | csv | json | junit) (default "table")
+            type: string
+            default: "table"
+        steps:
+          - rox-roxctl-install:
+              rox_api_token: <<parameters.rox_api_token>>
+              rox_central_endpoint: <<parameters.rox_central_endpoint>>
+          - run: >-
+              ./roxctl image check -e <<parameters.rox_central_endpoint>> --image <<parameters.rox_image>> --output <<parameters.output_format>>
+    commands:
+      rox-roxctl-install:
+        parameters:
+          rox_api_token:
+            description: API key with CI permissions
+            type: string
+          rox_central_endpoint:
+            description: URL of Central (central.contoso.com:443 for example)
+            type: string    
+        steps:
+          - run: >-
+              curl -k -L -H "Authorization: Bearer <<parameters.rox_api_token>>" https://<<parameters.rox_central_endpoint>>/api/cli/download/roxctl-linux --output ./roxctl
+          - run: chmod +x ./roxctl
+    
+workflows:
+  scanimage:
+    when: always
+    jobs:
+      - rox-orb/rox-image-scan: 
+          context: rox
+          name: scan an image
+          rox_central_endpoint: $ROX_CENTRAL_ENDPOINT
+          rox_api_token: $ROX_API_TOKEN
+          rox_image: neilcar/jenkins-demo:latest
+      - rox-orb/rox-image-check: 
+          context: rox
+          name: check an image against build-time policies
+          rox_central_endpoint: $ROX_CENTRAL_ENDPOINT
+          rox_api_token: $ROX_API_TOKEN
+          rox_image: neilcar/jenkins-demo:latest
+      - rox-orb/rox-deployment-check: 
+          context: rox
+          name: Check deployment
+          rox_central_endpoint: $ROX_CENTRAL_ENDPOINT
+          rox_api_token: $ROX_API_TOKEN
+          rox_deployment: deploy.yml
